[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "water_column_sonar_ui"
version = "25.7.0"
authors = [
  { name="Rudy Klucik", email="rudy.klucik@noaa.gov" },
]
maintainers = [
  { name="Rudy Klucik", email="rudy.klucik@noaa.gov" },
]
description = "Machine Learning and AI tool for analyzing water column sonar data."
keywords = ["ocean", "sonar", "water column"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE-MIT"]

dependencies = [
    "aiobotocore==2.21.1",
    "boto3==1.37.1",
    "botocore==1.37.1",
    "hvplot",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "s3fs==2025.3.2",
    "scipy==1.15.1",
    "xarray==2025.3.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.8.0",
    "bandit",
    "black==25.1.0",
    "build",
    "isort",
    "matplotlib",
    "pooch==1.8.2",
    "pre-commit",
    "pyinstaller",
    "pytest==8.3.5",
    "ruff",
    "tqdm",
    "twine",
]

[project.urls]
Homepage = "https://echo.fish/ai"
Repository = "https://github.com/CI-CMG/water-column-sonar-ai"
Issues = "https://github.com/CI-CMG/water-column-sonar-ai/issues"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pre-commit-hooks.bandit]
exclude = ["*/tests/*"]

[tool.isort]
known_first_party = "water_column_sonar_ai"
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
combine_as_imports = true

[tool.black]
line-length = 88
